--- a/Layouts/MainPage.xml
+++ b/Layouts/MainPage.xml
@@ -55,7 +55,7 @@
                 </instance>
                 <instance type="Title" uid="10">
                     <properties>
-                        <text>Just An Average Game</text>
+                        <text>Jarg</text>
                         <initial-visibility>Visible</initial-visibility>
                         <font>Consolas,-96,400,0</font>
                         <color>0,0,0</color>
