--- a/Layouts/MainPage.xml
+++ b/Layouts/MainPage.xml
@@ -131,6 +131,30 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="List" uid="1">
+                    <properties>
+                        <items>Original; Nothingness</items>
+                        <tooltip></tooltip>
+                        <initial-visibility>Visible</initial-visibility>
+                        <enabled>Yes</enabled>
+                        <type>Dropdown list</type>
+                        <multi-select>No</multi-select>
+                        <auto-font-size>Yes</auto-font-size>
+                        <id-optional></id-optional>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>924</x>
+                        <y>531</y>
+                        <z>0</z>
+                        <width>199</width>
+                        <height>22</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
