--- a/Layouts/MainPage.xml
+++ b/Layouts/MainPage.xml
@@ -133,8 +133,8 @@
                 </instance>
                 <instance type="List" uid="1">
                     <properties>
-                        <items>Original; Nothingness</items>
-                        <tooltip></tooltip>
+                        <items>Original; Nothingness; Random</items>
+                        <tooltip>Choose the map here</tooltip>
                         <initial-visibility>Visible</initial-visibility>
                         <enabled>Yes</enabled>
                         <type>Dropdown list</type>
