--- a/Layouts/MainPage.xml
+++ b/Layouts/MainPage.xml
@@ -155,6 +155,33 @@
                         <hotspotY>0</hotspotY>
                     </world>
                 </instance>
+                <instance type="txtMadeBy" uid="2">
+                    <properties>
+                        <text>Made with love by Prototype Games   http://prototype-games.github.io/</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Consolas,-19,400,0</font>
+                        <color>0,0,0</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>893</x>
+                        <y>659</y>
+                        <z>0</z>
+                        <width>427</width>
+                        <height>77</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
