--- a/Layouts/MainPage.xml
+++ b/Layouts/MainPage.xml
@@ -133,7 +133,7 @@
                 </instance>
                 <instance type="List" uid="1">
                     <properties>
-                        <items>Original; Nothingness; Smile; Hang; Arena; Random</items>
+                        <items>Original; Nothingness; Smile; Hang; Arena; Duality; Complex; Flash; Random</items>
                         <tooltip>Choose the map here</tooltip>
                         <initial-visibility>Visible</initial-visibility>
                         <enabled>Yes</enabled>
