--- a/Layouts/MainPage.xml
+++ b/Layouts/MainPage.xml
@@ -133,11 +133,7 @@
                 </instance>
                 <instance type="List" uid="1">
                     <properties>
-<<<<<<< HEAD
-                        <items>Original; Nothingness; Smile; Hang; Arena; Elevator; Random</items>
-=======
-                        <items>Original; Nothingness; Smile; Hang; Arena; Duality; Complex; Flash; Random</items>
->>>>>>> origin/master
+                        <items>Original; Nothingness; Smile; Hang; Arena; Elevator; Duality; Complex; Flash; Random</items>
                         <tooltip>Choose the map here</tooltip>
                         <initial-visibility>Visible</initial-visibility>
                         <enabled>Yes</enabled>
