--- a/Layouts/Arena.xml
+++ b/Layouts/Arena.xml
@@ -29,7 +29,7 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="txtHp" uid="47">
+                <instance type="txtHpStats" uid="47">
                     <properties>
                         <text>Text</text>
                         <initial-visibility>Visible</initial-visibility>
@@ -244,8 +244,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1466</x>
-                        <y>417</y>
+                        <x>1536</x>
+                        <y>-32</y>
                         <z>0</z>
                         <width>16</width>
                         <height>4</height>
