--- a/Layouts/Duality.xml
+++ b/Layouts/Duality.xml
@@ -394,8 +394,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1466</x>
-                        <y>417</y>
+                        <x>1792</x>
+                        <y>-43</y>
                         <z>0</z>
                         <width>16</width>
                         <height>4</height>
@@ -406,7 +406,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="txtHp" uid="103">
+                <instance type="txtHpStats" uid="103">
                     <properties>
                         <text>Text</text>
                         <initial-visibility>Visible</initial-visibility>
