--- a/Layouts/Flash.xml
+++ b/Layouts/Flash.xml
@@ -208,8 +208,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1466</x>
-                        <y>417</y>
+                        <x>1806</x>
+                        <y>-53</y>
                         <z>0</z>
                         <width>16</width>
                         <height>4</height>
@@ -220,7 +220,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="txtHp" uid="88">
+                <instance type="txtHpStats" uid="88">
                     <properties>
                         <text>Text</text>
                         <initial-visibility>Visible</initial-visibility>
@@ -550,8 +550,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1348</x>
-                        <y>520</y>
+                        <x>1339</x>
+                        <y>535</y>
                         <z>0</z>
                         <width>250</width>
                         <height>250</height>
