--- a/Layouts/MainPage.xml
+++ b/Layouts/MainPage.xml
@@ -133,7 +133,7 @@
                 </instance>
                 <instance type="List" uid="1">
                     <properties>
-                        <items>Original; Nothingness; Smile; Hang; Arena; Elevator; Duality; Complex; Flash; Random</items>
+                        <items>Original; Nothingness; Smile; Hang; Arena; Elevator; Duality; Complex; Flash; Spin; Random</items>
                         <tooltip>Choose the map here</tooltip>
                         <initial-visibility>Visible</initial-visibility>
                         <enabled>Yes</enabled>
@@ -145,8 +145,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>924</x>
-                        <y>531</y>
+                        <x>1026</x>
+                        <y>528</y>
                         <z>0</z>
                         <width>199</width>
                         <height>22</height>
@@ -175,6 +175,84 @@
                         <z>0</z>
                         <width>427</width>
                         <height>77</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="sbHitPoints" uid="110">
+                    <properties>
+                        <value>20</value>
+                        <minimum>10</minimum>
+                        <maximum>100</maximum>
+                        <step>1</step>
+                        <tooltip></tooltip>
+                        <initial-visibility>Visible</initial-visibility>
+                        <enabled>Yes</enabled>
+                        <id-optional></id-optional>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1025</x>
+                        <y>569</y>
+                        <z>0</z>
+                        <width>200</width>
+                        <height>25</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                    </world>
+                </instance>
+                <instance type="txtConfMap" uid="111">
+                    <properties>
+                        <text>Map:</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Consolas,-19,400,0</font>
+                        <color>0,0,0</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>971</x>
+                        <y>531</y>
+                        <z>0</z>
+                        <width>73</width>
+                        <height>33</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="txtConfHp" uid="112">
+                    <properties>
+                        <text>HP:</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Consolas,-19,400,0</font>
+                        <color>0,0,0</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>971</x>
+                        <y>571</y>
+                        <z>0</z>
+                        <width>73</width>
+                        <height>33</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
                         <hotspotY>0</hotspotY>
