--- a/Layouts/MainPage.xml
+++ b/Layouts/MainPage.xml
@@ -131,9 +131,9 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="List" uid="1">
+                <instance type="lstMap" uid="1">
                     <properties>
-                        <items>Original; Nothingness; Smile; Hang; Arena; Elevator; Duality; Complex; Flash; Spin; Random</items>
+                        <items>Original; Nothingness; Smile; Hang; Arena; Elevator; Complex; Flash; Spin; Random</items>
                         <tooltip>Choose the map here</tooltip>
                         <initial-visibility>Visible</initial-visibility>
                         <enabled>Yes</enabled>
@@ -258,6 +258,57 @@
                         <hotspotY>0</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="txtConfPm" uid="120">
+                    <properties>
+                        <text>Mode:</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Consolas,-19,400,0</font>
+                        <color>0,0,0</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>971</x>
+                        <y>610</y>
+                        <z>0</z>
+                        <width>73</width>
+                        <height>33</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="lstPlayMode" uid="121">
+                    <properties>
+                        <items>Single; Double; Triple; Quadruple; x1.5; x0.5</items>
+                        <tooltip>Choose the map here</tooltip>
+                        <initial-visibility>Visible</initial-visibility>
+                        <enabled>Yes</enabled>
+                        <type>Dropdown list</type>
+                        <multi-select>No</multi-select>
+                        <auto-font-size>Yes</auto-font-size>
+                        <id-optional></id-optional>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1026</x>
+                        <y>609</y>
+                        <z>0</z>
+                        <width>199</width>
+                        <height>22</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
                     </world>
                 </instance>
             </instances>
